--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.0"
   },
   "devDependencies": {},
@@ -16,7 +17,11 @@
     "type": "git",
     "url": "git+https://github.com/Pompeu/aprenda_express.git"
   },
-  "keywords": ["nodejs", "express", "mongoose"],
+  "keywords": [
+    "nodejs",
+    "express",
+    "mongoose"
+  ],
   "author": "Itacir Ferreira Pompeu",
   "license": "MIT",
   "bugs": {
