--- a/package.json
+++ b/package.json
@@ -8,20 +8,23 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0"
+  },
   "scripts": {
     "start": "node app.js",
+    "lint": "./node_modules/.bin/eslint ./src --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Pompeu/aprenda_express.git"
   },
-  "keywords": [
-    "nodejs",
-    "express",
-    "mongoose"
-  ],
+  "keywords": ["nodejs", "express", "mongoose"],
   "author": "Itacir Ferreira Pompeu",
   "license": "MIT",
   "bugs": {
