--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0"
+    "eslint-plugin-promise": "^5.1.0",
+    "husky": "^7.0.2"
   },
   "scripts": {
     "start": "node app.js",
+    "prepare": "husky install",
     "lint": "./node_modules/.bin/eslint ./src --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
