--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.17.1",
+    "jest": "^27.1.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.0"
+    "mongoose": "^6.0.0",
+    "supertest": "^6.1.6"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
@@ -17,10 +19,10 @@
     "husky": "^7.0.2"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "node ./src/bin/init.js",
     "prepare": "husky install",
     "lint": "./node_modules/.bin/eslint ./src --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
