--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "supertest": "^6.1.6"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^2.0.3",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
@@ -22,7 +23,7 @@
     "start": "node ./src/bin/init.js",
     "prepare": "husky install",
     "lint": "./node_modules/.bin/eslint ./src --fix",
-    "test": "jest"
+    "test": "NODE_ENV=testing jest"
   },
   "repository": {
     "type": "git",
