--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "node ./src/bin/init.js",
     "prepare": "husky install",
-    "lint": "./node_modules/.bin/eslint ./src --fix",
+    "lint": "./node_modules/.bin/eslint ./ --fix",
     "test": "NODE_ENV=testing jest"
   },
   "repository": {
