--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "aprenda epxress",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "jest": "^27.1.0",
     "jsonwebtoken": "^8.5.1",
@@ -29,7 +30,11 @@
     "type": "git",
     "url": "git+https://github.com/Pompeu/aprenda_express.git"
   },
-  "keywords": ["nodejs", "express", "mongoose"],
+  "keywords": [
+    "nodejs",
+    "express",
+    "mongoose"
+  ],
   "author": "Itacir Ferreira Pompeu",
   "license": "MIT",
   "bugs": {
